# test-color-app

./: .bumpversion.toml  Dockerfile  README.md  build.py  docker-compose.yaml  pyproject.toml  shell.nix
.github/workflows/: preview.yaml  preview_create.yaml
docker/nginx/sites-enabled/: test-color-app
kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
templates/: index.html
